@@ -101,6 +101,8 @@ void ags_line_real_map_recall(AgsLine *line,
 			      guint output_pad_start);
 GList* ags_line_real_find_port(AgsLine *line);
 
+void ags_line_real_refresh_port(AgsLine *line);
+
 /**
  * SECTION:ags_line
  * @short_description: A composite widget to visualize #AgsChannel
@@ -123,6 +125,7 @@ enum{
   REMOVE_PLUGIN,
   MAP_RECALL,
   FIND_PORT,
+  REFRESH_PORT,
   STOP,
   LAST_SIGNAL,
 };
@@ -299,6 +302,8 @@ ags_line_class_init(AgsLineClass *line)
   
   line->map_recall = ags_line_real_map_recall;
   line->find_port = ags_line_real_find_port;
+
+  line->refresh_port = ags_line_real_refresh_port;
 
   line->stop = NULL;
 
@@ -490,6 +495,23 @@ ags_line_class_init(AgsLineClass *line)
 		 NULL, NULL,
 		 ags_cclosure_marshal_POINTER__VOID,
 		 G_TYPE_POINTER, 0);
+
+  /**
+   * AgsLine::refresh-port:
+   * @line: the #AgsLine
+   *
+   * The ::refresh-port signal.
+   * 
+   * Since: 4.2.2
+   */
+  line_signals[REFRESH_PORT] =
+    g_signal_new("refresh-port",
+                 G_TYPE_FROM_CLASS(line),
+                 G_SIGNAL_RUN_LAST,
+		 G_STRUCT_OFFSET(AgsLineClass, refresh_port),
+                 NULL, NULL,
+                 g_cclosure_marshal_VOID__VOID,
+                 G_TYPE_NONE, 0);
 
   /**
    * AgsLine::stop:
@@ -3696,6 +3718,73 @@ ags_line_find_port(AgsLine *line)
   g_object_unref((GObject *) line);
 
   return(list);
+}
+
+void
+ags_line_real_refresh_port(AgsLine *line)
+{
+  GList *start_line_member, *line_member;
+
+  line_member = 
+    start_line_member = ags_line_get_line_member(line);
+
+  while(line_member != NULL){
+    AgsPort *port;
+
+    port = AGS_LINE_MEMBER(line_member->data)->port;
+    
+    if(port != NULL){
+      GValue value = G_VALUE_INIT;
+
+      g_value_init(&value,
+		   G_TYPE_FLOAT);
+
+      ags_port_safe_read(port,
+			 &value);
+
+      if(AGS_LINE_MEMBER(line_member->data)->widget_type == AGS_TYPE_DIAL){
+	ags_dial_set_value(ags_line_member_get_widget(line_member->data),
+			   (gdouble) g_value_get_float(&value));
+      }else if(AGS_LINE_MEMBER(line_member->data)->widget_type == GTK_TYPE_SCALE){
+	gtk_adjustment_set_value(gtk_range_get_adjustment(ags_line_member_get_widget(line_member->data)),
+				 (gdouble) g_value_get_float(&value));
+      }else if(AGS_LINE_MEMBER(line_member->data)->widget_type == GTK_TYPE_SPIN_BUTTON){
+	gtk_spin_button_set_value(ags_line_member_get_widget(line_member->data),
+				  (gdouble) g_value_get_float(&value));
+      }else if(AGS_LINE_MEMBER(line_member->data)->widget_type == GTK_TYPE_CHECK_BUTTON){
+	gtk_check_button_set_active(ags_line_member_get_widget(line_member->data),
+				    (g_value_get_float(&value) != 0.0 ? TRUE: FALSE));
+      }else if(AGS_LINE_MEMBER(line_member->data)->widget_type == GTK_TYPE_TOGGLE_BUTTON){
+	gtk_toggle_button_set_active(ags_line_member_get_widget(line_member->data),
+				     (g_value_get_float(&value) != 0.0 ? TRUE: FALSE));
+      }
+      
+      g_object_unref(port);
+    }
+    
+    line_member = line_member->next;
+  }
+
+  g_list_free(start_line_member);
+}
+
+/**
+ * ags_line_refresh_port:
+ * @line: the #AgsLine
+ *
+ * Notify about to refresh ports.
+ * 
+ * Since: 4.2.2
+ */
+void
+ags_line_refresh_port(AgsLine *line)
+{
+  g_return_if_fail(AGS_IS_LINE(line));
+
+  g_object_ref((GObject *) line);
+  g_signal_emit((GObject *) line,
+		line_signals[REFRESH_PORT], 0);
+  g_object_unref((GObject *) line);
 }
 
 /**
