@@ -48,6 +48,9 @@ void ags_pad_real_map_recall(AgsPad *pad,
 			     guint output_pad_start);
 GList* ags_pad_real_find_port(AgsPad *pad);
 
+void ags_pad_real_refresh_port(AgsPad *pad);
+
+
 /**
  * SECTION:ags_pad
  * @short_description: A composite widget to visualize a bunch of #AgsChannel
@@ -67,6 +70,7 @@ enum{
   RESIZE_LINES,
   MAP_RECALL,
   FIND_PORT,
+  REFRESH_PORT,
   LAST_SIGNAL,
 };
 
@@ -217,6 +221,7 @@ ags_pad_class_init(AgsPadClass *pad)
   pad->resize_lines = ags_pad_real_resize_lines;
   pad->map_recall = ags_pad_real_map_recall;
   pad->find_port = ags_pad_real_find_port;
+  pad->refresh_port = ags_pad_real_refresh_port;
 
   /* signals */
   /**
@@ -360,6 +365,23 @@ ags_pad_class_init(AgsPadClass *pad)
 		 NULL, NULL,
 		 ags_cclosure_marshal_POINTER__VOID,
 		 G_TYPE_POINTER, 0);
+
+  /**
+   * AgsPad::refresh-port:
+   * @pad: the #AgsPad
+   *
+   * The ::refresh-port signal.
+   * 
+   * Since: 4.2.2
+   */
+  pad_signals[REFRESH_PORT] =
+    g_signal_new("refresh-port",
+                 G_TYPE_FROM_CLASS(pad),
+                 G_SIGNAL_RUN_LAST,
+		 G_STRUCT_OFFSET(AgsPadClass, refresh_port),
+                 NULL, NULL,
+                 g_cclosure_marshal_VOID__VOID,
+                 G_TYPE_NONE, 0);
 }
 
 void
@@ -1138,6 +1160,43 @@ ags_pad_find_port(AgsPad *pad)
   g_object_unref((GObject *) pad);
 
   return(list);
+}
+
+void
+ags_pad_real_refresh_port(AgsPad *pad)
+{
+  GList *start_line, *line;
+
+  /* output */
+  line =
+    start_line = ags_pad_get_line(pad);
+
+  while(line != NULL){
+    ags_line_refresh_port(line->data);
+
+    line = line->next;
+  }
+
+  g_list_free(start_line);
+}
+
+/**
+ * ags_pad_refresh_port:
+ * @pad: the #AgsPad
+ *
+ * Notify about to refresh ports.
+ * 
+ * Since: 4.2.2
+ */
+void
+ags_pad_refresh_port(AgsPad *pad)
+{
+  g_return_if_fail(AGS_IS_PAD(pad));
+
+  g_object_ref((GObject *) pad);
+  g_signal_emit((GObject *) pad,
+		pad_signals[REFRESH_PORT], 0);
+  g_object_unref((GObject *) pad);
 }
 
 void
